# faker-file

./: .coderabbit.yaml  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .scrutinizer.yml  .secrets.baseline  AGENTS.md  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.rst  MANIFEST.in  Makefile  README.rst  SECURITY.rst  TESTING.rst  changelog.txt  cli.txt  code_of_conduct.txt  concepts.txt  conftest.py  contributor_guidelines.txt  creating_docx.txt  creating_images.txt  creating_odt.txt  creating_pdf.txt  docker-compose.yml  documentation.txt  faker_file.cli.txt  faker_file.contrib.pdf_file.txt  faker_file.contrib.txt  faker_file.providers.augment_file_from_dir.augmenters.txt  faker_file.providers.augment_file_from_dir.extractors.txt  faker_file.providers.augment_file_from_dir.txt  faker_file.providers.base.txt  faker_file.providers.helpers.txt  faker_file.providers.image.txt  (+24 more)
.agents/skills/update-documentation/: SKILL.md
.doctrees/: changelog.doctree  cli.doctree  code_of_conduct.doctree  concepts.doctree  contributor_guidelines.doctree  creating_docx.doctree  creating_images.doctree  creating_odt.doctree  creating_pdf.doctree  documentation.doctree  environment.pickle  faker_file.cli.doctree  faker_file.contrib.doctree  faker_file.contrib.pdf_file.doctree  faker_file.doctree  faker_file.providers.augment_file_from_dir.augmenters.doctree  faker_file.providers.augment_file_from_dir.doctree  faker_file.providers.augment_file_from_dir.extractors.doctree  faker_file.providers.base.doctree  faker_file.providers.doctree  faker_file.providers.helpers.doctree  faker_file.providers.image.doctree  faker_file.providers.mixins.doctree  faker_file.providers.mp3_file.doctree  faker_file.providers.mp3_file.generators.doctree  faker_file.providers.pdf_file.doctree  faker_file.providers.pdf_file.generators.doctree  faker_file.storages.doctree  faker_file.tests.doctree  index.doctree  llms.doctree  methodology.doctree  package.doctree  quick_start.doctree  readme.doctree  recipes.doctree  security.doctree
.doctrees/talks/: pygrunn_2023.doctree
.github/workflows/: gh-pages.yml  test.yml
docs/: cli.rst  concepts.rst  conf.py  conf.py.distrib  conftest.py  creating_docx.rst  creating_images.rst  creating_odt.rst  creating_pdf.rst  creating_pdfs.rst  documentation.rst  faker_file.cli.rst  faker_file.contrib.pdf_file.rst  faker_file.contrib.rst  faker_file.providers.augment_file_from_dir.augmenters.rst  faker_file.providers.augment_file_from_dir.extractors.rst  faker_file.providers.augment_file_from_dir.rst  faker_file.providers.base.rst  faker_file.providers.helpers.rst  faker_file.providers.image.rst  faker_file.providers.mixins.rst  faker_file.providers.mp3_file.generators.rst  faker_file.providers.mp3_file.rst  faker_file.providers.pdf_file.generators.rst  faker_file.providers.pdf_file.rst  faker_file.providers.rst  faker_file.rst  faker_file.storages.rst  faker_file.tests.rst  index.rst  llms.rst  marytts.py  methodology.rst  package.rst  prismjs.rst  quick_start.rst  recipes.rst  source_tree.rst  test_docs.py
docs/_static/css/: prism_sphinx_rtd_theme.css
docs/_static/js/: inline_code.js
docs/talks/: pygrunn_2023.rst
examples/customizations/marytts_mp3_generator/: README.rst  __init__.py
examples/django_example/: README.rst  demo.ipynb  demo_europython_2023.ipynb
examples/django_example/factories/: __init__.py  auth_user.py  upload_upload.py
examples/django_example/project/: urls.py  wsgi.py
examples/django_example/upload/: admin.py  api.py  models.py  schema.py  tests.py  urls.py
examples/requirements/: common.in  common.txt  debug.txt  deployment.txt  dev.in  dev.txt  django_2_2.in  django_2_2.txt  django_2_2_and_flask.in  django_2_2_and_flask.txt  django_3_0.in  django_3_0.txt  django_3_0_and_flask.in  django_3_0_and_flask.txt  django_3_1.in  django_3_1.txt  django_3_1_and_flask.in  django_3_1_and_flask.txt  django_3_2.in  django_3_2.txt  django_3_2_and_flask.in  django_3_2_and_flask.txt  django_4_0.in  django_4_0.txt  django_4_0_and_flask.in  django_4_0_and_flask.txt  django_4_1.in  django_4_1.txt  django_4_1_and_flask.in  django_4_1_and_flask.txt  django_4_2.in  django_4_2.txt  django_4_2_and_flask.in  django_4_2_and_flask.txt  django_5_0.in  django_5_0.txt  django_5_0_and_flask.in  django_5_0_and_flask.txt  django_5_1.in  django_5_1.txt  (+15 more)
examples/sqlalchemy_example/: README.rst  run_server.py
examples/sqlalchemy_example/factories/: __init__.py  faker_file_admin_upload.py
examples/sqlalchemy_example/faker_file_admin/: __init__.py  alembic.ini  config.py  config_test.py  data.py  main.py  models.py
examples/sqlalchemy_example/sqlalchemy_factories/: __init__.py  faker_file_admin_upload.py
scripts/: alembic_migrate.sh  benchmark_test.sh  black.sh  build_docs.sh  check_release.sh  clean_up.sh  compile_requirements.sh  detect-secrets-create-baseline.sh  doc8.sh  flask_runserver.sh  generate_project_source_tree.py  install.sh  isort.sh  jupyter.sh  make_migrations.sh  make_release.sh  migrate.sh  mypy.sh  prepare_docs.sh  rebuild_docs.sh  ruff.sh  runserver.sh  serve_docs.sh  shell.sh  sqlalchemy_shell.sh  test_rst_docs.sh  test_tests.sh  uninstall.sh  upgrade_requirements.sh
src/faker_file/: __init__.py  base.py  cli.py  constants.py  content_generators.py  helpers.py  registry.py  utils.py
src/faker_file/cli/: command.py  helpers.py
src/faker_file/contrib/: docx_file.py  odt_file.py
src/faker_file/providers/: augment_image_from_path.py  augment_random_image_from_dir.py  bin_file.py  bmp_file.py  csv_file.py  docx_file.py  eml_file.py  epub_file.py  file_from_path.py  generic_file.py  gif_file.py  ico_file.py  jpeg_file.py  json_file.py  mixins.py  mp3_file.py  odp_file.py  ods_file.py  odt_file.py  pdf_file.py  png_file.py  pptx_file.py  random_file_from_dir.py  rtf_file.py  svg_file.py  tar_file.py  tiff_file.py  txt_file.py  webp_file.py  xlsx_file.py  xml_file.py  zip_file.py
src/faker_file/storages/: aws_s3.py  azure_cloud_storage.py  base.py  cloud.py  (+7 more)
talks/: pygrunn_2023.txt
(+193 files in other folders)
