[project]
name = "faker-file"
version = "0.18.4"
description = "Generate files with fake data."
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {file = "LICENSE.rst"}
authors = [
    {name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com"},
]
keywords = [
    "factories",
    "fake file",
    "fake files",
    "fake-file-generator",
    "fake-files-generator",
    "faker",
    "faker-file",
    "file-generator",
    "files",
    "files-generator",
    "test file",
    "test files",
    "test-file-generator",
    "test-files-generator",
    "testing",
]
classifiers = [
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.9"
dependencies = ["Faker"]

[project.optional-dependencies]
all = ["faker-file[common,data-augmentation,test,docs,build]"]
# all = [
#     "Faker",
#     "WeasyPrint",
#     "imgkit",
#     "odfpy",
#     "openpyxl",
#     "pathy[all]>=0.10.0,<0.12.0",
#     "paramiko",
#     "pdf2image",
#     "pdfkit",
#     "reportlab",
#     "python-docx",
#     "python-pptx",
#     "tablib",
#     "xml2epub",
#     "gtts",
#     "edge-tts",
#     "nlpaug",
#     "nltk",
#     "textaugment",
#     "textblob>=0.17,<0.18",
#     "tika",
#     "torch",
#     "transformers",
# ]
common = [
    "Faker",
    "WeasyPrint",
    "imgkit",
    "odfpy",
    "openpyxl",
    "pathy[all]>=0.10.0,<0.12.0",
    "paramiko",
    "pdf2image",
    "pdfkit",
    "reportlab",
    "python-docx",
    "python-pptx",
    "tablib",
    "xml2epub",
    "gtts",
    "edge-tts",
]
data-augmentation = [
    "nlpaug",
    "nltk",
    "textaugment",
    "textblob>=0.17,<0.18",
    "tika",
    "torch",
    "transformers",
]
azure = ["pathy[azure]>=0.10.0,<0.12.0"]
bmp = ["WeasyPrint", "pdf2image"]
django = ["Django>=2.2"]
docx = ["python-docx"]
epub = ["xml2epub"]
gcs = ["pathy[gcs]>=0.10.0,<0.12.0"]
gif = ["WeasyPrint", "pdf2image"]
images = ["imgkit"]
mp3 = ["gtts", "edge-tts"]
odp = ["odfpy"]
ods = ["tablib", "odfpy"]
odt = ["odfpy"]
pdf = ["pdfkit", "reportlab"]
pptx = ["python-pptx"]
s3 = ["pathy[s3]>=0.10.0,<0.12.0"]
sftp = ["paramiko"]
sqlalchemy = ["SQLAlchemy>=1.0", "SQLAlchemy-Utils>=0.37.0"]
tiff = ["WeasyPrint", "pdf2image"]
xlsx = ["tablib", "openpyxl"]

dev = [
    "detect-secrets",
    "doc8",
    "ipython",
    "mypy",
    "pydoclint",
    "ruff",
    "twine",
    "uv",
]
test = [
    "asyncssh",
    "coverage",
    "django",
    "fake.py",
    "fuzzywuzzy[speedup]",
    "moto>=5.0.0",
    "moto[s3]",
    "openai",
    "parameterized",
    "pytest",
    "pytest-codeblock",
    "pytest-cov",
    "pytest-django",
    "pytest-ordering",
    "pytest-parallel",
    "pytest-rerunfailures",
    "respx",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-no-pragma",
    "sphinx-llms-txt-link",
    "sphinx-source-tree",
]
build = [
    "build",
    "twine",
    "wheel",
]

[project.scripts]
faker-file = "faker_file.cli.command:main"

[project.urls]
"Bug Tracker" = "https://github.com/barseghyanartur/faker-file/issues"
"Documentation" = "https://faker-file.readthedocs.io/"
"Source Code" = "https://github.com/barseghyanartur/faker-file"
"Changelog" = "https://faker-file.readthedocs.io/en/latest/changelog.html"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
    "-rA",
    "-vvv",
    "-q",
   "--cov=faker_file",
   "--ignore=.tox",
   "--ignore=requirements",
   "--ignore=release",
   "--ignore=examples",
   "--ignore=tmp",
   "--cov-report=html",
   "--cov-report=term",
   "--cov-report=annotate",
   "--cov-append",
   "--capture=no",
]
#testpaths = [
#    "test*.py",
#    "**/test*.py",
#    "*.rst",
#    "**/*.rst",
#    "docs/test_docs.py",
#]
python_files = [
    "test_*.py",
    "tests.py",
]
pythonpath = [
    "src",
    "examples/django_example",
    "examples/sqlalchemy_example",
    "examples/customizations",
]
norecursedirs = [
    "*.egg",
    ".git",
    ".tox",
    ".env",
    "_sass",
    "build",
    "dist",
    "migrations",
]
markers = [
    "optional: mark a test as optional.",
    "documentation: mark a test as a documentation test.",
    "ml: ML test.",
    "django: Django test.",
    "sqlalchemy: SQLAlchemy test."
]
DJANGO_SETTINGS_MODULE = "project.settings.testing"

[tool.ruff]
line-length = 80

# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
#    "ANN",  # Annotations: missing (return) types
    "B",  # Bugbear: common bug patterns or design problems
    "C4",  # Complexity: McCabe complexity checker
    "E",  # Pycodesyle: Style guide enforcement
    "F",  # Pyflakes: Source files errors
    "G",  # Logging format: Basic logging format errors
    "I",  # Isort: import sorting
    "ISC",  # Naming: Variable naming convention
    "INP",  # Implicit namespace packages: Check if __init__.py is present
    "N",  # Naming: Variable naming convention
    "PERF",  # Perflint: Performance linting
    "Q",
    "SIM",  # Simplify: Helps simplify your code
    "TD",  # TO DO: Format TO DO comments
]
lint.ignore = [
    "G004",  # Allow use of f-string in logging
    "ISC003",  # Allow explicitly concatenated strings
#    "N805",  # Allow first argument of a method be named other than `self`
    "TD002",  # Allow to do without author
    "TD003",  # Allow to do without URL
]
# Enable autofix for formatting and import sorting
fix = true
src = [
    "examples/customizations",
    "examples/django_example",
    "examples/sqlalchemy_example",
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "examples/django_example/project/wsgi.py",
    "docs",
]

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"conftest.py" = [
    "PERF203"  # Allow `try`-`except` within a loop incurs performance overhead
]

[tool.ruff.lint.isort]
known-first-party = [
    "upload",
    "factories",
    "project",
    "faker_file_admin",
    "instance",
    "sqlalchemy_factories",
    "marytts_mp3_generator",
]
known-third-party = ["django", "factory", "faker_file"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "tmp",
    "src/faker_file.egg-info",
    "src/faker_file/tests"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"
verboseOutput = true

[tool.mypy]
#check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
warn_no_return = false
mypy_path = "src/faker_file"

[tool.coverage.run]
relative_files = true
omit = [
    "src/faker_file/tests/*",
    "examples/simple/project/settings/*",
    "examples/django_example/project/wsgi.py",
    "examples/django_example/upload/migrations/*",
    ".tox/*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
    # "raise NotImplementedError",
]

[tool.doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path = [
    "docs/_build",
    "builddocs/",
    "examples/requirements/*.in",
    "examples/requirements/*.txt",
    "examples/django_example/project/static/*",
    "examples/django_example/project/media/tmp/*",
    "src/faker_file.egg-info",
    "tmp/",
]
max-line-length = 80
sphinx = true
