[bdist_wheel]
universal = 1

[wheel]
universal = 1

[coverage:run]
branch = True
source = ./src/faker_file/

[coverage:report]
fail_under = 80
show_missing = True

[flake8]
exclude =
    build,
    dist,
    docs,
    .git,
    .tox,
ignore =
max-line-length = 80

[isort]
atomic = true
combine_as_imports = true
default_section = THIRDPARTY
forced_separate = faker_file
include_trailing_comma = true
known_first_party = faker_file
known_third_party =
    django
    factory
multi_line_output = 5
skip =
    docs,
    fabfile.py
    setup.py,
    wsgi.py,

[metadata]
license-file = LICENSE.rst
