[bdist_wheel]
universal = 1

[wheel]
universal = 1

[metadata]
license-file = LICENSE.rst

[doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path =
    docs/_build,
    builddocs/,
    examples/requirements/*.in,
    examples/requirements/*.txt,
    examples/django_example/project/static/*,
    examples/django_example/project/media/tmp/*,
    src/faker_file.egg-info,
    tmp/,
max-line-length = 80
sphinx = true
